[package]
name = "eth-indexer"
version = "0.1.0"
edition = "2018"
description = "Ethereum Indexer"

[dependencies]
dotenv = "0.15.0"
postgres = {version = "0.19.7", features = ["with-serde_json-1"]}
tokio-postgres = "0.7.1"
ethers = { version = "2.0.10", features = ["abigen", "ws", "rustls"] }
ethers-contract = "2.0.10"
tokio = { version = "1.32", features = ["full"] }
eyre = "0.6.8"
num = "0.4.1"
serde_json = "1.0.107"
serde = "1.0.107"
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
rust_decimal = { version = "1.32.0", features = ["db-postgres"] }
env_logger = "0.9.0"
log = "0.4.14"
reqwest = "0.11.20"